# av-safe-toolkit

./: .bandit.yaml  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  ACCEPTABLE_USE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  DPIA_TEMPLATE.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  PRIVACY.md  README.md  SECURITY.md  THREAT_MODEL.md  calibration_SOP.md  docker-compose.yml  mkdocs.yml  mypi.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cloud-e2e-local.yml  lint-and-types.yml  lint.yml  non-pertinent-validation-check.yml  security.yml  validate-cases.yml
avsafe_descriptors/: CITATION.cff  Dockerfile  README.md  __init__.py  pyproject.toml  requirements-dev.txt  validate_cases.py
avsafe_descriptors/audio/: a_weighting.py  third_octave.py
avsafe_descriptors/avsafe_descriptors/cli/: rules_run.py  sim.py
avsafe_descriptors/avsafe_descriptors/integrity/: signing.py
avsafe_descriptors/avsafe_descriptors/rules/: evaluator.py  ieee_1789.py
avsafe_descriptors/avsafe_descriptors/server/: app.py
avsafe_descriptors/cli/: policy_enforce.py  report.py  rules_run.py  sim.py  validate_cases_v1.py  validate_minutes.py  video_to_light.py
avsafe_descriptors/hf_avc/: db.py  ingest_cli.py  models.py  query_cli.py
avsafe_descriptors/hf_avc/cases/: case_template_v1.json  example_waco_1993.json
avsafe_descriptors/hf_avc/data/cases/: CASE_TEMPLATE.json  case_template_v1.json  example_waco_summary.json
avsafe_descriptors/hf_avc/schemas/: case.schema.json  case_schema_v1.json  context.jsonld
avsafe_descriptors/hf_avc/tools/: ingest_cli.py
avsafe_descriptors/integrity/: hash_chain.py  integrity.py  signing.py
avsafe_descriptors/io/: jsonl_io.py  minute_summary.py  sqlite_store.py
avsafe_descriptors/light/: __init__.py  luma.py  tlm.py
avsafe_descriptors/report/: render_html.py
avsafe_descriptors/rules/: engine.py  evaluator.py  ieee_1789.py  light.yaml  noise.yaml  profile_loader.py  profiles.py
avsafe_descriptors/rules/profiles/: who_ieee_profile.yaml
avsafe_descriptors/server/: app.py  report_core.py  store.py
avsafe_descriptors/tests/: test_hash_chain.py
avsafe_descriptors/tools/: report_cli.py  rules_cli.py  sim_cli.py
avsafe_descriptors/video/: __init__.py
cloud/: __init__.py  api_app.py  auth.py  common.py  limiter.py  local_runner.py  requirements.txt  rules_lambda.py  template.yaml  verify_lambda.py
docs/: api.md  corpus.md  index.md  quickstart.md
tests/: test_e2e_video_pipeline.py  test_hash_chain.py  test_ieee1789_curve.py  test_integrity.py  test_rules.py  test_rules_eval.py  test_signing_crypto.py  test_third_octave_aw.py  test_tlm_metrics.py  test_video_to_tlm.py
tools/: calibration_cli.py  client_uploader.py  devices_cli  purge_secret.sh  smoke.sh  video-smoke.py
